== Unreleased
* Add `AuthorizationAdjustment` class and `authorization_adjustments` to Transaction
* Add Braintree::Dispute.find method
* Coinbase is no longer a supported payment method. `PaymentMethodNoLongerSupported` will be returned for Coinbase operations.

== 2.76.0
* Pass configured gateway to Merchant#_new instead of using global gateway (thanks @cwalsh!)

== 2.75.0
* Add support for additional PayPal options when vaulting a PayPal Order

== 2.74.0
* Add Visa Checkout support
* Add ConnectedMerchantStatusTransitioned and ConnectedMerchantPayPalStatusChanged Auth webhooks
* Add new properties to `CreditCardVerification` and `Customer`

== 2.73.0
* Bugfix: Add `unique_number_identifier` to Transaction::CreditCardDetails
* Updates to specs

== 2.72.0
* Remove `account_description` field from +UsBankAccount+ and +UsBankAccountDetails+

== 2.71.0
* Allow optional configuration of SSL version
* Add functionality to list all merchant accounts for a merchant with `merchant_account.all`

== 2.70.0
* Bugfix: Update UsBank tests to use legal routing numbers
* Add option +skip_advanced_fraud_check+ for transaction flows
* Add IdealPayment class with +sale+ and +find+ methods
* Add payer_status accessor to paypal_details object

== 2.69.1
* Bugfix: Allow PaymentMethod.find(token) to return +UsBankAccount+

== 2.69.0
* Add +default?+ support for +UsBankAccount+
* Add +ach_mandate+ data to +UsBankAccount+ and +UsBankAccountDetails+

== 2.68.2
* Bugfix: allow Customer#payment_methods to return UsBankAccounts

== 2.68.1
* Fix compatibility with new gateway endpoint

== 2.68.0
* Add 'UsBankAccount' payment method

== 2.67.0
* Add 'created_at' to subscription search
* Expose 'plan_id' in subscription 'status_details'
* Add cannot clone marketplace transaction error
* Add FailOnDuplicatePaymentMethod to Customer update

== 2.66.0
* Add 'currency_iso_code' to subscription 'status_details'
* Expose credit card 'product_id'